# 04_projects

./: .gitignore  pyproject.toml
.learnings/: ERRORS.md  LEARNINGS.md
config_templates/: commands_template.xlsx  protocol_template.xlsx  telemetry_template.xlsx
config_templates/yaml_examples/: commands_example.yaml  protocol_example.yaml  telemetry_example.yaml
docs/specs/: 2026-06-12-auto-test-platform-design.md
scripts/: check_mapping.py  generate_commands_config.py  generate_telemetry_config.py  run_sequence_test.py  tcp_connect_test.py
sequences/: normal_ignition_test.json  normal_ignition_test.yaml
src/codec/: checksum.py  frame_decoder.py  frame_encoder.py
src/config/: command_table.py  inject_table.py  loader.py  telemetry_table.py
src/engine/: assertion_engine.py  sequence_loader.py  step_scheduler.py  test_runner.py  timeline_engine.py
src/gui/: main_window.py
src/protocol/: base.py  registry.py  tcp.py
tests/: conftest.py  test_assertion_engine.py  test_checksum.py  test_command_table.py  test_frame_decoder.py  test_frame_encoder.py  test_frame_encoder_inject.py  test_inject_table.py  test_integration.py  test_integration_engine.py  test_loader.py  test_sequence_loader.py  test_step_scheduler.py  test_tcp_driver.py  test_telemetry_table.py  test_timeline_engine.py
项目文档/: 星云RS422通讯协议A04_20250423二院.docx
项目文档/excel版遥测大表草稿/: ~$固定地址参数注入表.xlsx  固定地址参数注入1.xlsx  固定地址参数注入2.xlsx  立即遥控指令配置表.xlsx  遥测配置表.xlsx
项目文档/优化后excel配置表/: 固定地址参数注入表1_优化后.xlsx  固定地址参数注入表2_优化后.xlsx  立即遥控指令配置表.xlsx  立即遥控指令配置表_优化后.xlsx  遥测配置表_优化后.xlsx
(+8 files in other folders)
